--- a/prototype/src/scss/base/layout.scss
+++ b/prototype/src/scss/base/layout.scss
@@ -8,7 +8,7 @@ body {
 	font-size: 16px;
 	color: $color-primary;
 	min-height: 100vh;
-	background-color: $color-light;
+	background-color: white;
 }
 
 html,
@@ -75,17 +75,17 @@ section {
 }
 
 #wrapper {
-	padding-top: 134px;
+	//padding-top: 160px;
 	position: relative;
 	display: block;
 	min-height: calc(100vh - 400px);
 
 	@media(max-width: 767px) {
-		padding-top: 124px;
+		//padding-top: 124px;
 	}
 	
 	@media(max-width: 480px) {
-		padding-top: 60px;
+		//padding-top: 60px;
 	}
 
 }
@@ -95,7 +95,7 @@ section {
 	margin: 0 auto;
 	padding: 0 15px;
 	display: block;
-	max-width: 970px;
+	//max-width: 1170px;
 
 	// // @media(min-width: 1441px) {
 	// // 	max-width: 1170px;
