--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -3,11 +3,11 @@ section.home {
 	transition: all 300ms ease;
 
 	&:hover {
-		box-shadow: 0 5px 10px 0 rgba(black, 0.1);
+		//box-shadow: 0 5px 10px 0 rgba(black, 0.1);
 
-		img {
-			transform: scale(1.1);
-		}
+		// img {
+		// 	transform: scale(1.1);
+		// }
 
 	}
 
