add some cool things to menu

--- a/prototype/src/scss/base/layout.scss
+++ b/prototype/src/scss/base/layout.scss
@@ -47,6 +47,12 @@ a {
 	color: inherit;
 	outline: none;
 	border: none;
+
+	&:hover {
+		text-decoration: none;
+		color: inherit;
+	}
+
 }
 
 ul {
